--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation 'com.google.code.gson:gson:2.10'
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
-
-
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.1.0"
 }
